# xodexxx

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: release.yml
.github/ISSUE_TEMPLATE/: 1-issue.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml  release.yml
api/: index.html
api/object/: index.html
api/scene/: index.html
concepts/: index.html
contributing/: index.html
docs/: contributing.md  index.md  project.md  release-notes.md  sponsorship.md
docs/api/: index.md
docs/api/object/: index.md
docs/api/scene/: index.md
docs/concepts/: index.md
docs/getting-started/: features.md  first-steps.md  help.md  index.md
docs/reference/: cli.md  environment.md  index.md  settings.md
docs/reference/policies/: license.md  platforms.md  versioning.md
docs/tutorials/: index.md
docs/tutorials/flappy/: index.md  objects.md  scenes.md
getting-started/: index.html
getting-started/features/: index.html
getting-started/first-steps/: index.html
getting-started/help/: index.html
project/: index.html
reference/: index.html
reference/cli/: index.html
reference/environment/: index.html
reference/policies/: index.html
reference/policies/license/: index.html
reference/policies/versioning/: index.html
reference/settings/: index.html
release-notes/: index.html
search/: search_index.json
sponsorship/: index.html
tests/: test_game.py  test_image.py  test_management.py  test_objectmanager .py  test_objects.py  test_scenemanager.py  test_scenes.py  test_sounds.py  test_storage.py
tutorials/: index.html
tutorials/flappy/: index.html
tutorials/flappy/objects/: index.html
tutorials/flappy/scenes/: index.html
xodex/: __init__.py
xodex/conf/: __init__.py  xsettings.py
xodex/conf/template/: requirements.txt
xodex/conf/template/project/: __main__.py  objects.py  scenes.py  settings.py
xodex/contrib/objects/: __init__.py  animator.py  image.py  spritesheet.py  text.py
xodex/contrib/scenes/: __init__.py  blur.py  xodex.py
xodex/core/: __init__.py  exceptions.py  localization.py
xodex/core/management/: __init__.py  command.py
xodex/core/management/commands/: build.py  run.py  shell.py  start.py
xodex/game/: __init__.py  sounds.py  storage.py
xodex/object/: __init__.py  base.py  manager.py  objects.py
xodex/scene/: __init__.py  base.py  layer.py  manager.py  signal.py
xodex/utils/: functions.py  inputs.py  log.py  singleton.py  storage.py  values.py  version.py
